# Air-Mouse-Control

./: CONTRIBUTING.md  README.md  config.yaml  gesture.md  implementation_plan.md  pyproject.toml
.github/workflows/: ci.yml
airmouse/actions/: __init__.py  linux_uinput.py  media.py  mouse.py  system.py  windows.py
airmouse/cli/: main.py  train_cli.py
airmouse/config/: settings.py
airmouse/core/: __init__.py  action_dispatcher.py  camera.py  config_mapper.py  dispatcher.py  engine.py  main_engine.py  mapper.py  mediapipe_tracker.py  ml_recognizer.py  opencv_camera.py  plugin_manager.py  recognizer.py  rule_recognizer.py  tracker.py
airmouse/gestures/: __init__.py  classifier.py  trainer.py
airmouse/ui/: dashboard.py
airmouse/utils/: filters.py  logger.py
plugins/: sample_plugin.py
tests/: test_camera_tracker.py  test_gestures_ml.py  test_mapper_dispatcher.py  test_plugin_manager.py  test_recognizer.py  test_settings.py
